; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_async.c_ProcessCompletedNotifies.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_async.c_ProcessCompletedNotifies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@backendHasSentNotifications = common dso_local global i32 0, align 4
@CurrentMemoryContext = common dso_local global i32 0, align 4
@Trace_notify = common dso_local global i64 0, align 8
@DEBUG1 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"ProcessCompletedNotifies\00", align 1
@listenChannels = common dso_local global i64 0, align 8
@NIL = common dso_local global i64 0, align 8
@backendTryAdvanceTail = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ProcessCompletedNotifies() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @backendHasSentNotifications, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %29

5:                                                ; preds = %0
  store i32 0, i32* @backendHasSentNotifications, align 4
  %6 = load i32, i32* @CurrentMemoryContext, align 4
  store i32 %6, i32* %1, align 4
  %7 = load i64, i64* @Trace_notify, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %5
  %10 = load i32, i32* @DEBUG1, align 4
  %11 = call i32 @elog(i32 %10, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %9, %5
  %13 = call i32 (...) @StartTransactionCommand()
  %14 = call i32 (...) @SignalBackends()
  %15 = load i64, i64* @listenChannels, align 8
  %16 = load i64, i64* @NIL, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %12
  %19 = call i32 (...) @asyncQueueReadAllNotifications()
  br label %20

20:                                               ; preds = %18, %12
  %21 = load i32, i32* @backendTryAdvanceTail, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %20
  store i32 0, i32* @backendTryAdvanceTail, align 4
  %24 = call i32 (...) @asyncQueueAdvanceTail()
  br label %25

25:                                               ; preds = %23, %20
  %26 = call i32 (...) @CommitTransactionCommand()
  %27 = load i32, i32* %1, align 4
  %28 = call i32 @MemoryContextSwitchTo(i32 %27)
  br label %29

29:                                               ; preds = %25, %4
  ret void
}

declare dso_local i32 @elog(i32, i8*) #1

declare dso_local i32 @StartTransactionCommand(...) #1

declare dso_local i32 @SignalBackends(...) #1

declare dso_local i32 @asyncQueueReadAllNotifications(...) #1

declare dso_local i32 @asyncQueueAdvanceTail(...) #1

declare dso_local i32 @CommitTransactionCommand(...) #1

declare dso_local i32 @MemoryContextSwitchTo(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
